--- a/Backoffice/Components/MarketInfo/News/NewsEditDialog.razor
+++ b/Backoffice/Components/MarketInfo/News/NewsEditDialog.razor
@@ -27,13 +27,13 @@
         Source: <input type="text" class="form-control" @bind="News.Source"/>
     </div>
     <div>
-        Url: <input type="text" class="form-control" @bind="News.Sentiment"/>
+        Sentiment: <input type="text" class="form-control" @bind="News.Sentiment"/>
     </div>
     <div>
-        Source: <input type="text" class="form-control" @bind="News.UrlAddress"/>
+        UrlAddress: <input type="text" class="form-control" @bind="News.UrlAddress"/>
     </div>
     <div>
-        Url: <input type="text" class="form-control" @bind="News.ImageUrl"/>
+        ImageUrl: <input type="text" class="form-control" @bind="News.ImageUrl"/>
     </div>
     <div>
         Associated Assets: <input type="text" class="form-control" @bind="AssociatedAssetsAsString"/>
