--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
@@ -44,6 +44,8 @@
         <th>RetriesCount</th>
         <th>EventDate</th>
         <th>Workflow state</th>
+        <th>Refund TxId</th>
+        <th>Cancelling</th>
         <th/>
     </tr>
     </thead>
