--- a/Backoffice/Components/MarketInfo/News/NewsComponent.razor
+++ b/Backoffice/Components/MarketInfo/News/NewsComponent.razor
@@ -13,6 +13,7 @@
     <tr>
         <th>#</th>
         <th>Topic</th>
+        <th>Description</th>
         <th>Lang</th>
         <th>Source</th>
         <th>Sentiment</th>
@@ -33,6 +34,7 @@
         <tr>
             <td>@rowNumber</td>
             <td>@news.Topic</td>
+            <td>@news.Description</td>
             <td>@news.Lang</td>
             <td>@news.Source</td>
             <td>@news.Sentiment</td>
