--- a/Backoffice/Components/BitGo/Wallets/BitGoWalletsListComponent.razor
+++ b/Backoffice/Components/BitGo/Wallets/BitGoWalletsListComponent.razor
@@ -16,6 +16,7 @@
 <table class="table">
     <thead>
         <tr>
+            <th>Broker Id</th>
             <th>Coin</th>
             <th>Wallet</th>
             <th>Last update time</th>
