--- a/Backoffice/Pages/BitGo.razor
+++ b/Backoffice/Pages/BitGo.razor
@@ -23,7 +23,7 @@
         <button class="nav-link @CheckActive(Menus.UnlockSession)" aria-current="page" @onclick="SetUnlockSession">Unlock session</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Wallets)" aria-current="page" @onclick="SetWallets">Wallets</button>
+        <button class="nav-link @CheckActive(Menus.Wallets)" aria-current="page" @onclick="SetWallets">Wallet sign</button>
     </li>
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.Users)" aria-current="page" @onclick="SetUsers">Users</button>
