--- a/Backoffice/Components/BitGo/Users/BitGoUsersTableRow.razor
+++ b/Backoffice/Components/BitGo/Users/BitGoUsersTableRow.razor
@@ -8,6 +8,7 @@
 <tr>
     <td>@Item.BrokerId</td>
     <td>@Item.Id</td>
+    <td>@Item.CoinId</td>
     <td>@Item.BitGoId</td>
     <td>@Item.RegisterDate</td>
 
