--- a/Backoffice/Components/BitGo/Users/BitGoUsersListComponent.razor
+++ b/Backoffice/Components/BitGo/Users/BitGoUsersListComponent.razor
@@ -53,7 +53,7 @@
 
     private List<BitGoUser> BitGoUsersList { get; set; } = new();
 
-    private async void OnRefresh()
+    private async Task OnRefresh()
     {
         LoaderConfig.Enable();
         
@@ -63,11 +63,11 @@
         await InvokeAsync(StateHasChanged);
     }
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
-        OnRefresh();
+        await OnRefresh();
         
-        base.OnInitialized();
+        await base.OnInitializedAsync();
     }
 
     private async Task OnAddUser()
