--- a/Backoffice/_Imports.razor
+++ b/Backoffice/_Imports.razor
@@ -39,3 +39,4 @@
 @using Backoffice.Components.MarketInfo.ApiKeys
 @using Backoffice.Components.MarketInfo.News
 @using Backoffice.Components.Templates
+@using Backoffice.Components.CashOperations.InternalTransfers
