internal transfer page fix

--- a/Backoffice/Components/CashOperations/InternalTransfers/InternalTransferTableRow.razor
+++ b/Backoffice/Components/CashOperations/InternalTransfers/InternalTransferTableRow.razor
@@ -19,10 +19,8 @@
     <td>@Item.Amount</td>
     <td>@Item.AssetSymbol</td>
     <td>@Item.DestinationPhoneNumber</td>
-    <td>@Item.DestinationClientId</td>
-    <td>@Item.DestinationWalletId</td>
+    <td>@Item.DestinationClientId<br/>@Item.DestinationWalletId</td>
     <td>@Item.Status</td>
-    <td>@Item.MatchingEngineId</td>
     <td>@Item.LastError</td>
     <td>@Item.MeErrorCode</td>
     <td>@Item.RetriesCount</td>
