added search by phone

--- a/Backoffice/Components/Clients/ClientInfoComponent.razor
+++ b/Backoffice/Components/Clients/ClientInfoComponent.razor
@@ -6,7 +6,7 @@
 
 @inject IKycStatusService _kycStatusClient
 
-<div style="height: 140px">
+<div style="height: 200px">
 
     <table>
         <tr>
@@ -28,6 +28,14 @@
         <tr>
             <td><b>Email Confirmed:</b></td>
             <td>@Client.EmailConfirmed</td>
+        </tr>
+        <tr>
+            <td><b>Phone:</b></td>
+            <td>@Client.Phone</td>
+        </tr>
+        <tr>
+            <td><b>Phone Confirmed:</b></td>
+            <td>@Client.PhoneConfirmed</td>
         </tr>
         <tr>
             <td><b>KYC Status:</b></td>
